# barcode-api

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 10570f725f26_redo_migrations.py  30e1f546c299_added_user_model.py  73e3447451b0_added_scraping_model.py  7d53e7cc28e3_removed_user_model.py  87e76339ad5d_unique_uuid_for_images.py  b1075f4d93a0_added_models_from_erd_diagram.py  bec9c8df1564_fixed_typo_in_product_model.py  c59b66bd41d5_unique_uuid_for_thumbnails.py  da6a18c2aaeb_added_scraping_name_column.py  daec27183618_fixed_typo_in_product_model_2.py
barcode_api/: app.py
barcode_api/api/: deps.py
barcode_api/api/v1/: api.py
barcode_api/api/v1/routes/: admin.py  auth.py  hello.py  image.py  lists.py  products.py  public.py  shopping_list.py  shopping_list_item.py  user.py
barcode_api/config/: __init__.py  database.py  settings.py
barcode_api/middleware/: __init__.py  process_time.py
barcode_api/models/: ImageData.py  Product.py  ScrapeData.py  ScrapeResult.py  ShoppingList.py  ShoppingListItem.py  __init__.py  image_data.py  product.py  scrape_data.py  shopping_list.py  shopping_list_item.py  user.py
barcode_api/repositories/: ScrapeResultRepository.py  __init__.py
barcode_api/schemas/: __init__.py  auth.py  db_base.py  image_data.py  products.py  scraping.py  shopping_list.py  shopping_list_item.py  token.py  user.py
barcode_api/services/: CrudService.py  UserCRUD.py  __init__.py  jwt.py
barcode_api/services/crud/: CrudService.py  ProductCrud.py  ScrapeDataCrud.py  __init__.py  crud_service.py  image_crud.py  product_crud.py  scrape_data_crud.py  shopping_list_crud.py  shopping_list_item_crud.py
barcode_api/services/mixin/: __init__.py  base.py  security.py
barcode_api/services/scraping/: ScrapeService.py  __init__.py  exceptions.py  html_parser.py  html_parsers.py  scrape_service.py  strategy.py
barcode_api/services/scraping/tests/: conftest.py  test_html_parser.py
barcode_api/tests/: conftest.py  types.py  utils.py
barcode_api/tests/integration/: conftest.py
barcode_api/tests/integration/api/v1/: conftest.py  test_media.py  test_user.py
barcode_api/tests/unit/: conftest.py
barcode_api/tests/unit/api/v1/routes/: test_image.py  test_products.py  test_public.py  test_user.py
barcode_api/tests/unit/services/scraping/: conftest.py  test_html_parser.py
barcode_api/tests/unit/services/scraping/data/: 4009900382250.html
barcode_api/utils/: media.py  optional.py  shopping_list_extras.py
docker/: Dockerfile  docker-entrypoint.sh
