[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"] # PEP 517

[project]
authors = [
  {name = "Szymon Kozioł", email = "szymonkoz@student.agh.edu.pl"},
  {name = "Inatsi Yermakovich"},
  {name = "Karolina Klimek"},
  {name = "Mateusz Lewandowski"},
  {name = "Patryk Sokoliński"},
  {name = "Błazej Czaicki"},
]
dependencies = [
  "fastapi",
  "fastapi_utils@git+https://github.com/Ignatella/fastapi-utils",
  "uvicorn",
  "pydantic",
  "pydantic[email]",
  "sqlalchemy[asyncio] >= 2.0.13",
  "SQLAlchemy >= 2.0.13",
  "alembic",
  "python-dotenv",
  "psycopg",
  "python-multipart",
  "fastapi-oidc@git+https://github.com/Critteros/fastapi-oidc@feat_allow_passing_jwt_decode_options",
  "python-barcode",
  "beautifulsoup4", # Scraping dependencies
  "pyppeteer",
  "pyppeteer_stealth",
  "httpx",
  "python-magic"
]
name = "barcode_api"
readme = "README.md"
version = "0.0.2"

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-env",
  "pip-tools",
  "sqlalchemy-stubs",
  "types-beautifulsoup4",
  "pytest-asyncio",
  "mkdocs-material",
  "mkdocstrings[python]",
  "types-Pillow",
  "Pillow",
  "numpy",
  "types-python-jose",
  "jose"
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]


[tool.setuptools.packages.find]
include = ["barcode_api*"]

[tool.mypy]
exclude = ["build", "dist", "venv", "env", "node_modP>ules"]

[tool.pytest.ini_options]
env = [
    "POSTGRES_SERVER=127.0.0.1:5432",
    "POSTGRES_DB=test",
    "POSTGRES_USER=postgres",
    "POSTGRES_PASSWORD=postgres",
    "OIDC_CLIENT_ID=barcode-api",
    "OIDC_BASE_AUTHORIZATION_SERVER_URI=http://example.com",
    "OIDC_ISSUER=http://example.com/identity",
    "OIDC_SIGNATURE_CACHE_TTL=3600",
]
